--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Icaro8.github.io/Page/src/pages",
+  "homepage": "https://Icaro8.github.io/Page/",
   "name": "app1",
   "version": "0.1.0",
   "private": true,
